--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "test:all": "npm run test:client && npm run test:server"
   },
   "dependencies": {
+    "@payloadcms/db-mongodb": "^3.42.0",
+    "@payloadcms/next": "^3.42.0",
+    "@payloadcms/payload-cloud": "^3.42.0",
+    "@payloadcms/richtext-lexical": "^3.42.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "graphql": "^16.11.0",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
+    "payload": "^3.42.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
