fixed tRPC integration & now can communicate between client and server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,7 @@
     "args": ["-l"]
   },
 
-  "jest.runMode": "on-demand"
+  "jest.runMode": "on-demand",
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
