--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "graphql": "^16.11.0",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "payload": "^3.42.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.5",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
